### 1.2.5-dev

- updates PATH environment variable to call /universc/launch_universc.sh from any working directory

### 1.2.4

- enables unit testing via nextflow for nf-core module

- removes forced "auto" chemistry for 10x technology (allows setting for test fies too small for automated detection)

- sets default values for last call parameters to 10x technology if not found (allows runs without errors on 1st call)

- enables computing RNA offset parameters without warning messages (supports containerised workflows)  

### 1.2.3

- enables GitHub citation widget

- updates SmartSeq2 and SmartSeq3 default barcodes 

- updates SmartSeq2 adapter sequences and documents chemistry configurations

- enables running Slurm scheduler with automatic template configuration

- correctly sets the source directory to call subroutines and whitelists on Slurm (https://stackoverflow.com/questions/56962129/how-to-get-original-location-of-script-used-for-slurm-job)

### 1.2.2

- bug fixes for detecting I1 and I2 files

- updates smartseq2 parameters for optional full-length or 5' end alignment (non-UMI read counts)

- document full-length chemistry parameters

### 1.2.1

- bug fixes for R3 and R4 ffile inputs

- bug fixes for compressed fastq.gz in I1 and I2

- corrected whitelist for smartseq test job

### 1.2.0

- backend to fully functional GUI app

- updates to support 10x 3` scRNA version 1

- updates test jobs and test data for SmartSeq3

- automated file detection for R3 and R4 read files

### 1.1.7

- uses reverse complement barcode whitelist for inDrops v1 and v2 (automatically generated)

- updated matching to remove adapter sequence between barcodes tested locally

- updates to support legacy versions (v1 and v2) of inDrops protocol

### 1.1.6.2

- documents GUI application

- documents pre-generated references

### 1.1.6.1

- updates large files in Docker image

### 1.1.6

- update building STAR in Docker containers

- updates to syntax in script and subroutines
